appId: app.orbis.social
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users&posts&feeds"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

# Navigate to another user profile
- extendedWaitUntil:
    visible:
      id: "bottomBarSearchBtn"
- tapOn:
    id: "bottomBarSearchBtn"
- tapOn:
    id: "searchScreenInput"
- inputText: "b"
- tapOn:
    id: "searchAutoCompleteResult-bob.test"
- assertVisible:
    id: "profileView"

# Can follow/unfollow another user
- tapOn:
    id: "followBtn"
- tapOn:
    point: 65%,35% # dismiss the subscribe prompt
- tapOn:
    id: "unfollowBtn"

# Can mute/unmute another user
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Mute Account"
- assertVisible: "Account Muted"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Unmute Account"
- assertNotVisible: "Account Muted"
