# flow.yaml

appId: app.orbis.social
---
- launchApp
# Login
# - runFlow:
#    when:
# - tapOn: "Sign In"
# - tapOn: "Username or email address"
# - inputText: "ansh.bsky.team"
# - tapOn: "Password"
# - inputText: "PASSWORd"
# - tapOn: "Next"
# Allow notifications if popup is visible
# - runFlow:
#     when:
#       visible: "Notifications"
#     commands:
#       - tapOn: "Allow"
# Scroll in main feed
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
# Swipe between feeds
- swipe:
    direction: "LEFT"
- swipe:
    direction: "LEFT"
- swipe:
    direction: "LEFT"
- swipe:
    direction: "RIGHT"
- swipe:
    direction: "RIGHT"
- swipe:
    direction: "RIGHT"
# Go to Notifications
- tapOn:
    id: "viewHeaderDrawerBtn"
- tapOn: "Notifications"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- swipe:
    direction: "DOWN" # Make header visible
# Go to Feeds tab
- tapOn:
    id: "viewHeaderDrawerBtn"
- tapOn: "Feeds"
- scrollUntilVisible:
    element: "Discover"
    direction: UP
- tapOn: "Discover"
- waitForAnimationToEnd
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
# Click on post
- tapOn:
    id: "postText"
    index: 0
- "scroll"
- "scroll"
- "scroll"
- "scroll"
- "scroll"
